se modifico nombre de base de datos quedando hangar_eccome. Si bien esta sequelize instalado no se observo la carpeta .sequelizerc y se genero. Se cambiaron los modelos por los nuevos de la base. Queda pendiente eliminar base de datos dump de fecha 14 de enero. Se dejo por las dudas en modelo la carpeta index.Otro motivo para que analicemos el tema de la carpeta  sequelizerc es que no se verifica el archivo seeders en l proyecto.See intento incorporar el module export e config.js pero indica problemas. La terminacion del archivo difiere al de los videos

--- a/src/database/config/config.json
+++ b/src/database/config/config.json
@@ -1,8 +1,8 @@
-{
+module.exports = {
   "development": {
     "username": "root",
     "password": null,
-    "database": "hangar",
+    "database": "hangar_eccomer",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
